--- a/Userland/SampleCodeModule/Makefile
+++ b/Userland/SampleCodeModule/Makefile
@@ -1,14 +1,18 @@
 include ../Makefile.inc
 
 MODULE=0000-sampleCodeModule.bin
+MODULE_ELF=0000-sampleCodeModule.elf
 SOURCES=$(wildcard [^_]*.c)
 SOURCES_ASM=$(wildcard asm/*.asm)
 OBJECTS_ASM=$(SOURCES_ASM:asm/%.asm=obj/%.asm.o)
 
-all: $(MODULE)
+all: $(MODULE) $(MODULE_ELF)
 
 $(MODULE): $(SOURCES) $(OBJECTS_ASM)
 	$(GCC) $(GCCFLAGS) -I./include -T sampleCodeModule.ld _loader.c $(OBJECTS_ASM) $(SOURCES) -o ../$(MODULE)
+
+$(MODULE_ELF): $(SOURCES) $(OBJECTS_ASM)
+	$(GCC) $(GCCFLAGS) -I./include -T sampleCodeModule.ld -Wl,--oformat=elf64-x86-64 _loader.c $(OBJECTS_ASM) $(SOURCES) -o ../$(MODULE_ELF)
 
 obj/%.asm.o : asm/%.asm
 	mkdir -p obj
@@ -17,5 +21,6 @@ obj/%.asm.o : asm/%.asm
 clean:
 	rm -rf *.o
 	rm -rf obj
+	rm -rf ../$(MODULE) ../$(MODULE_ELF)
 
 .PHONY: all clean print
