Add process management syscalls and userland tests
Implemented new syscalls for process management (create, kill, block, unblock, nice, yield, wait) in the kernel and exposed them to userland. Added corresponding assembly stubs, updated headers, and extended the shell to support new test commands. Introduced userland test programs for memory management, process management, and synchronization, along with supporting utilities and a minimal stdio implementation.

Co-Authored-By: Keoni Lucas Dubovitsky <143182572+keodubo@users.noreply.github.com>
Co-Authored-By: matepirola <132600198+matepirola@users.noreply.github.com>

--- a/Userland/SampleCodeModule/Makefile
+++ b/Userland/SampleCodeModule/Makefile
@@ -3,16 +3,17 @@ include ../Makefile.inc
 MODULE=0000-sampleCodeModule.bin
 MODULE_ELF=0000-sampleCodeModule.elf
 SOURCES=$(wildcard [^_]*.c)
+SOURCES_TESTS=$(wildcard tests/*.c)
 SOURCES_ASM=$(wildcard asm/*.asm)
 OBJECTS_ASM=$(SOURCES_ASM:asm/%.asm=obj/%.asm.o)
 
 all: $(MODULE) $(MODULE_ELF)
 
-$(MODULE): $(SOURCES) $(OBJECTS_ASM)
-	$(GCC) $(GCCFLAGS) -I./include -T sampleCodeModule.ld _loader.c $(OBJECTS_ASM) $(SOURCES) -o ../$(MODULE)
+$(MODULE): $(SOURCES) $(SOURCES_TESTS) $(OBJECTS_ASM)
+	$(GCC) $(GCCFLAGS) -I./include -I./tests -T sampleCodeModule.ld _loader.c $(OBJECTS_ASM) $(SOURCES) $(SOURCES_TESTS) -o ../$(MODULE)
 
-$(MODULE_ELF): $(SOURCES) $(OBJECTS_ASM)
-	$(GCC) $(GCCFLAGS) -I./include -T sampleCodeModule.ld -Wl,--oformat=elf64-x86-64 _loader.c $(OBJECTS_ASM) $(SOURCES) -o ../$(MODULE_ELF)
+$(MODULE_ELF): $(SOURCES) $(SOURCES_TESTS) $(OBJECTS_ASM)
+	$(GCC) $(GCCFLAGS) -I./include -I./tests -T sampleCodeModule.ld -Wl,--oformat=elf64-x86-64 _loader.c $(OBJECTS_ASM) $(SOURCES) $(SOURCES_TESTS) -o ../$(MODULE_ELF)
 
 obj/%.asm.o : asm/%.asm
 	mkdir -p obj
