--- a/Userland/SampleCodeModule/Makefile
+++ b/Userland/SampleCodeModule/Makefile
@@ -4,16 +4,17 @@ MODULE=0000-sampleCodeModule.bin
 MODULE_ELF=0000-sampleCodeModule.elf
 SOURCES=$(wildcard [^_]*.c)
 SOURCES_TESTS=$(wildcard tests/*.c)
+SOURCES_SH=$(wildcard sh/*.c)
 SOURCES_ASM=$(wildcard asm/*.asm)
 OBJECTS_ASM=$(SOURCES_ASM:asm/%.asm=obj/%.asm.o)
 
 all: $(MODULE) $(MODULE_ELF)
 
-$(MODULE): $(SOURCES) $(SOURCES_TESTS) $(OBJECTS_ASM)
-	$(GCC) $(GCCFLAGS) -I./include -I./tests -T sampleCodeModule.ld _loader.c $(OBJECTS_ASM) $(SOURCES) $(SOURCES_TESTS) -o ../$(MODULE)
+$(MODULE): $(SOURCES) $(SOURCES_TESTS) $(SOURCES_SH) $(OBJECTS_ASM)
+	$(GCC) $(GCCFLAGS) -I./include -I./tests -I./sh -T sampleCodeModule.ld _loader.c $(OBJECTS_ASM) $(SOURCES) $(SOURCES_TESTS) $(SOURCES_SH) -o ../$(MODULE)
 
-$(MODULE_ELF): $(SOURCES) $(SOURCES_TESTS) $(OBJECTS_ASM)
-	$(GCC) $(GCCFLAGS) -I./include -I./tests -T sampleCodeModule.ld -Wl,--oformat=elf64-x86-64 _loader.c $(OBJECTS_ASM) $(SOURCES) $(SOURCES_TESTS) -o ../$(MODULE_ELF)
+$(MODULE_ELF): $(SOURCES) $(SOURCES_TESTS) $(SOURCES_SH) $(OBJECTS_ASM)
+	$(GCC) $(GCCFLAGS) -I./include -I./tests -I./sh -T sampleCodeModule.ld -Wl,--oformat=elf64-x86-64 _loader.c $(OBJECTS_ASM) $(SOURCES) $(SOURCES_TESTS) $(SOURCES_SH) -o ../$(MODULE_ELF)
 
 obj/%.asm.o : asm/%.asm
 	mkdir -p obj
