test_synchro bug fix
Deleted the README-fg-bg.md file and its reference in tree.txt. Updated .gitignore to exclude Userland/SampleCodeModule/.DS_Store. Improved semaphore management in syscall.c by associating semaphores with owner_pid and cleaning up entries on close/unlink. Added debug logging and improved error handling in test_sync.c.

Co-Authored-By: matepirola <132600198+matepirola@users.noreply.github.com>
Co-Authored-By: nmazzitelli <111613730+nmazzitelli@users.noreply.github.com>

--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,4 @@ Kernel/kernel.bin
 
 # Scripts de desarrollo local (opcional - podrías querer commitear debug.sh)
 # debug.sh
+Userland/SampleCodeModule/.DS_Store
