Add memory usage statistics syscall and userland tool
Introduces a new kernel syscall and ABI for retrieving memory allocator statistics, with shared mm_stats.h header for kernel and userland. Implements collectors for both buddy and first-fit allocators, exposes the data via sys_mm_get_stats, and adds a new 'mem' userland command to display memory usage and fragmentation details. Includes build system updates, shell integration, and a test harness for validation.

--- a/Kernel/Makefile
+++ b/Kernel/Makefile
@@ -58,6 +58,10 @@ ifneq ($(MM_FLAG),)
 	GCCFLAGS += $(MM_FLAG)
 endif
 
+ifneq ($(findstring USE_BUDDY_SYSTEM,$(MM_FLAG)),)
+	GCCFLAGS += -DCONFIG_MM_BUDDY
+endif
+
 all: $(KERNEL) $(KERNEL_ELF)
 
 $(KERNEL): $(STATICLIBS) $(ALL_OBJECTS)
