Refactor kernel and userland source tree structure
Moved kernel source files into categorized subdirectories (mm, ipc, process, fs, lib, sys) and updated Makefile to include new paths. Similarly, reorganized userland SampleCodeModule sources into lib, programs, and shell folders, updating Makefile accordingly. Also replaced local include paths with standard includes in userland programs and fixed error messages in shell/sh.c for mvar command.

Co-Authored-By: matepirola <132600198+matepirola@users.noreply.github.com>
Co-Authored-By: nmazzitelli <111613730+nmazzitelli@users.noreply.github.com>

--- a/Kernel/Makefile
+++ b/Kernel/Makefile
@@ -36,18 +36,30 @@ KERNEL_ELF=kernel.elf
 SOURCES=$(wildcard *.c)
 SOURCES_INTERRUPT=$(wildcard interrupt/*.c)
 SOURCES_DRIVERS=$(wildcard drivers/*.c)
+SOURCES_MM=$(wildcard mm/*.c)
+SOURCES_IPC=$(wildcard ipc/*.c)
+SOURCES_PROCESS=$(wildcard process/*.c)
+SOURCES_FS=$(wildcard fs/*.c)
+SOURCES_LIB=$(wildcard lib/*.c)
+SOURCES_SYS=$(wildcard sys/*.c)
 SOURCES_ASM=$(wildcard asm/*.asm)
 
 OBJECTS=$(SOURCES:.c=.o)
 OBJECTS_INTERRUPT=$(SOURCES_INTERRUPT:.c=.o)
-OBJECTS_ASM=$(SOURCES_ASM:.asm=.o)
 OBJECTS_DRIVERS=$(SOURCES_DRIVERS:.c=.o)
+OBJECTS_MM=$(SOURCES_MM:.c=.o)
+OBJECTS_IPC=$(SOURCES_IPC:.c=.o)
+OBJECTS_PROCESS=$(SOURCES_PROCESS:.c=.o)
+OBJECTS_FS=$(SOURCES_FS:.c=.o)
+OBJECTS_LIB=$(SOURCES_LIB:.c=.o)
+OBJECTS_SYS=$(SOURCES_SYS:.c=.o)
+OBJECTS_ASM=$(SOURCES_ASM:.asm=.o)
 
 LOADERSRC=loader.asm
 
 LOADEROBJECT=$(LOADERSRC:.asm=.o)
 STATICLIBS=
-ALL_OBJECTS= $(LOADEROBJECT) $(OBJECTS) $(OBJECTS_ASM) $(OBJECTS_INTERRUPT) $(OBJECTS_DRIVERS)
+ALL_OBJECTS= $(LOADEROBJECT) $(OBJECTS) $(OBJECTS_ASM) $(OBJECTS_INTERRUPT) $(OBJECTS_DRIVERS) $(OBJECTS_MM) $(OBJECTS_IPC) $(OBJECTS_PROCESS) $(OBJECTS_FS) $(OBJECTS_LIB) $(OBJECTS_SYS)
 
 # Seleccion del memory manager
 # Por defecto usa First Fit, se puede sobrescribir con MM_FLAG
